<resources>
    <string name="app_name">GroomerLoc</string>
    <string name="botonAtras">Back</string>
    <string name="botonSiguiente">Next</string>
    <string name="menuCabeceraMenu">Menu</string>
    <string name="menuCabeceraInfo">Information</string>
    <string name="menuCabeceraOpcion">Options</string>
    <string name="menuAyuda">Help</string>
    <string name="menuAcercaDe">About...</string>
    <string name="menuPreferencias">Preferences</string>
    <string name="menuMiCuenta">My account</string>
    <string name="menuSesion">Log out</string>
    <string name="menuSalir">Exit application</string>
    <string name="botonLogin">Log in</string>
    <string name="botonRegistro">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="direccion">Address</string>
    <string name="indicaciones">Additional indications</string>
    <string name="toast_faltaMailPw">A correct Email and Password are required</string>
    <string name="error_autenticar">Authentication error</string>
    <string name="descLogo">Application logo.</string>
    <string name="saludo">Welcome</string>
    <string name="abrir_navegacion_lateral">Open side menu</string>
    <string name="cerrar_navegacion_lateral">Close side menu</string>
    <string name="mensajeErrorCargaMarcas">Groomers locations could not be loaded.</string>
    <string name="menuCliBuscPelu">Groomers finder</string>
    <string name="menuCliPerro">My pets</string>
    <string name="menuCliCitas">My appointments</string>
    <string name="prefCliCatMapa">Map</string>
    <string name="prefCliZoomMapa">Viewing radius:</string>
    <string name="prefCliZoomMapaDesc">Approximate viewing radius (in meters) with which
        the map will be displayed when the application starts.</string>
    <string name="mensajeNoCitas">No upcoming appointments.</string>
    <string name="botonRecargaCitas">RELOAD APPOINTMENTS</string>
    <string name="menuPeluTarifas">My rates</string>
    <string name="menuPeluCitasConfirmadas">My confirmed appointments</string>
    <string name="editCuentaNuevoPw">New password</string>
    <string name="editCuentaNuevoPw2">Repeat new password</string>
    <string name="botonEditCuentaMail">Change email</string>
    <string name="botonEditCuentaNombre">Change name</string>
    <string name="botonEditCuentaTlfn">Change phone number</string>
    <string name="botonEditCuentaPw">Change password</string>
    <string name="botonEditCuentaEliCu">Eliminar cuenta</string>
    <string name="botonEditCuentaGuardar">Save</string>
    <string name="alDiEditCuentaTituloEmail">Type the new email:</string>
    <string name="alDiEditCuentaTituloNombre">Type the new name:</string>
    <string name="alDiEditCuentaTituloTlfn">Type the new phone number:</string>
    <string name="alDiEditCuentaTituloPw">Type the new password of 6 or more characters (twice):</string>
    <string name="alDiEditCuentaAvisoAut">To change the email, password or delete the user,
        it is necessary to have recently authenticated. To do so, enter your password and try again:</string>
    <string name="alDiEditCuentaAutenticar">Authenticate</string>
    <string name="alDiEditCuentaBorrar">Are you sure you want to delete this account?</string>
    <string name="mensajeEditCuentaAutExito">Successfully authenticated.</string>
    <string name="mensajeEditCuentaAutPwIncorrecto">The typed password is incorrect.</string>
    <string name="mensajeEditCuentaAutFallo">Failed authentication.</string>
    <string name="mensajeEditCuentaNada">No value has been entered.</string>
    <string name="mensajeEditCuentaEmailExito">The email has been changed successfully.</string>
    <string name="mensajeEditCuentaErrorCarga">An error occurred while loading your data.</string>
    <string name="mensajeEditCuentaMismoEmail">The typed email is the same as the existing one.</string>
    <string name="mensajeEditCuentaExisteEmail">is already registered.</string>
    <string name="mensajeEditCuentaErrorMail">The email could not be changed.</string>
    <string name="mensajeEditCuentaNombreExito">The name has been successfully changed.</string>
    <string name="mensajeEditCuentaMismoNombre">The typed name is the same as the existing one.</string>
    <string name="mensajeEditCuentaErrorNombre">The name could not be changed.</string>
    <string name="mensajeEditCuentaTlfnExito">The phone number has been successfully changed.</string>
    <string name="mensajeEditCuentaMismoTlfn">The typed phone number is the same as the existing one.</string>
    <string name="mensajeEditCuentaErrorTlfn">The phone number could not be changed.</string>
    <string name="mensajeEditCuentaExitoPw">Password successfully changed.</string>
    <string name="mensajeEditCuentaPwVacio">No value has been entered in one or both of the password fields.</string>
    <string name="mensajeEditCuentaMismoPw">The typed password is the same as the existing one.</string>
    <string name="mensajeEditCuentaErrorPw">The password could not be changed.</string>
    <string name="mensajeEditCuentaBorrada">The account</string>
    <string name="mensajeEditCuentaBorrada2">has been deleted.</string>
    <string name="mensajeEditCuentaErrorBorrar">The account could not be deleted.</string>
    <string name="botonEditCuentaLoc">Change location</string>
    <string name="mensajeEditCuentaErrorLoc">The location could not be updated.</string>
    <string name="mensajeEditCuentaExitoLoc">Location has been updated successfully.</string>
    <string name="descAplicacion">This application was designed to facilitate communication
        and management of appointments between pet groomers and clients, with the invaluable
        help of geolocation.</string>
    <string name="desarrolladores">Developers:</string>
    <string name="nombreJuanrajc">Juan Ramón Jover Cruz</string>
    <string name="aniosAplicacion">2018 - 2019</string>
    <string name="mensajeNoPerros">You have no registered pets.</string>
    <string name="mensajeNoResultPerros">The list of pets could not be loaded.</string>
    <string name="descIvEditPerro">Edit data of the pet.</string>
    <string name="descIvBorrarPerro">Delete pet.</string>
    <string name="dialogBorraPerro">Do you want to erase</string>
    <string name="mensajePerroBorradoExito">has been deleted successfully.</string>
    <string name="mensajePerroNoBorrado">could not be deleted.</string>
    <string name="salir">EXIT</string>
    <string name="nuevoPerro">ADD NEW PET</string>
    <string name="tituloRegPerro">DATA OF YOUR PET</string>
    <string name="raza">Breed</string>
    <string name="peso">Weight</string>
    <string name="kg">Kg</string>
    <string name="cajaPeso">For example: 12.5</string>
    <string name="sexo">Sex</string>
    <string name="macho">MALE</string>
    <string name="hembra">FEMALE</string>
    <string name="comentarios">Comments</string>
    <string name="cajaComentarios">Health problems, allergies...</string>
    <string name="botonFoto">Add photo...</string>
    <string name="descFotoPerro">Photo of the pet.</string>
    <string name="botonGuardarMascota">Save pet</string>
    <string name="mensajeCamposPerro">The fields \'Name\', \'Breed\' and \'Weight\' are required.</string>
    <string name="mensajeSexo">You must select the sex of your pet.</string>
    <string name="mensajeRequestFoto">It was not possible to load the image.</string>
    <string name="mensajeNoEspecificado">Not specified.</string>
    <string name="mensajeSubidaCorrecta">The image has been uploaded correctly.</string>
    <string name="mensajeSubidaFallida">Failure to upload the image.</string>
    <string name="mensajeFalloRegPerro">Unable to register</string>
    <string name="mensajeFalloActuPerro">The pet data could not be updated.</string>
    <string name="mensajePerroNoExiste">Failed to load the pet\'s data.</string>
    <string name="tituloDialog">Select an option:</string>
    <string name="opCamara">Take a photo...</string>
    <string name="opGaleria">Choose from gallery...</string>
    <string name="opCancelar">Cancel</string>
    <string name="mensajeSobreescrituraPerro">Are you sure you want to update</string>
    <string name="mensajeSobreescrituraPerro2">\'s data?</string>
    <string name="si">YES</string>
    <string name="no">NO</string>
    <string name="tituloRegistro">SIGN IN</string>
    <string name="rol">What are you?</string>
    <string name="cliente">Customer</string>
    <string name="peluquero">Groomer</string>
    <string name="password2">Repeat password</string>
    <string name="nombre">Name</string>
    <string name="tlfn">Phone number</string>
    <string name="mensajeRol">You must select a role (customer or groomer).</string>
    <string name="mensajeCampos">You must complete all the fields.</string>
    <string name="mensajeEmail">You must type a valid Email.</string>
    <string name="mensajePw">Passwords are not equals.</string>
    <string name="mensajePw2">The password must be at least 6 characters.</string>
    <string name="regCompletado">Registration process completed.</string>
    <string name="error_registro">Registering error.</string>
    <string name="tituloLoc">Click on your localization or...</string>
    <string name="dir">Type your address</string>
    <string name="datAdi">Additional indications (floor, door, etc)</string>
    <string name="mensajeMarca">Location:</string>
    <string name="mensajeNoDireccion">Address not found.</string>
    <string name="mensajeDirVacia">You must find an address or make a mark on the map.</string>
    <string name="mensajeNoLoc">Your current location could not be obtained.</string>
    <string name="botonRegistrar">Complete registration</string>
    <string name="tituloADBuscadorPelu">Type name of the groomer:</string>
    <string name="botonBuscar">Search</string>
    <string name="mensajeBusqSinRes">No search result.</string>
    <string name="mensajeBusqError">An error occurred while performing the search.</string>
    <string name="mensajeBusqNoComp">The search could not be performed.</string>
    <string name="descFotoPelu">Image of groomer.</string>
    <string name="fichaPeluTel">Phone number:</string>
    <string name="fichaPeluDir">Address:</string>
    <string name="fichaPeluDir2">Additional indications:</string>
    <string name="botonTarifas">RATES</string>
    <string name="botonPedirCita">MAKE APPOINTMENT</string>
    <string name="mensajeErrorCargaDatosPelu">An error occurred while loading the groomer\'s data.</string>
    <string name="tituloEditTarifasPelu">MY RATES</string>
    <string name="avisoEditTarifas">Services with a blank price will not appear in your service offer.</string>
    <string name="euro">€</string>
    <string name="tituloEdTaServicios">SERVICES</string>
    <string name="edTaBase">BASE</string>
    <string name="edTaExtra">* EXTRA</string>
    <string name="editBanio">Wash:</string>
    <string name="editArreglo">Partial haircut:</string>
    <string name="editCompleto">Complete haircut:</string>
    <string name="editDeslanado">Removal of wool:</string>
    <string name="editTinte">Dye:</string>
    <string name="edTaPeso1">* From and for every</string>
    <string name="edTaPeso2">Kg of weight, an extra is added to the base price.</string>
    <string name="tituloEdTaFijas">FIXED RATES</string>
    <string name="editOidos">Ear cleaning:</string>
    <string name="editUnias">Nail cut:</string>
    <string name="editAnales">Anal gland cleaning:</string>
    <string name="botonGuardarTarifas">Save rates</string>
    <string name="mensajeTarGuardadas">Rates have been saved successfully.</string>
    <string name="mensajeTarNoGuardadas">Rates could not be saved.</string>
    <string name="mensajeErrorCargaTarifas">An error occurred while loading the rates.</string>
    <string name="mensajeAvisoPesoExtra">If you include an extra by weight, you must also specify the weight.</string>
</resources>