<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditCuentaPeluActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvEdCuPeluTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp"
            android:text="@string/menuMiCuenta"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/botonEdCuPeluAtras"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEdCuPeluTitulo">

            <TextView
                android:id="@+id/tvEdCuPeluMailTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvEdCuPeluMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/colorAccent" />

            <Button
                android:id="@+id/bEdCuPeluMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/botonEditCuentaMail"
                android:onClick="cambiaEmail"/>

            <TextView
                android:id="@+id/tvEdCuPeluNombreTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvEdCuPeluNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/colorAccent" />

            <Button
                android:id="@+id/bEdCuPeluNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/botonEditCuentaNombre"
                android:onClick="cambiaNombre"/>

            <TextView
                android:id="@+id/tvEdCuPeluTlfnTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tlfn"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvEdCuPeluTlfn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/colorAccent" />

            <Button
                android:id="@+id/bEdCuPeluTlfn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/botonEditCuentaTlfn"
                android:onClick="cambiaTlfn"/>

            <TextView
                android:id="@+id/tvEdCuPeluLocTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fichaPeluDir"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvEdCuPeluLoc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/tvEdCuPeluLocExtraTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fichaPeluDir2"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvEdCuPeluLocExtra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/colorAccent" />

            <Button
                android:id="@+id/bEdCuPeluLoc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/botonEditCuentaLoc"
                android:onClick="cambiaLoc"/>

            <Button
                android:id="@+id/bEdCuPeluPw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/botonEditCuentaPw"
                android:onClick="cambiaPw"/>

            <Button
                android:id="@+id/bEdCuPeluEliCu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/botonEditCuentaEliCu"
                android:textColor="@color/colorAlerta"
                android:onClick="eliminaCuenta"/>
        </LinearLayout>

        <Button
            android:id="@+id/botonEdCuPeluAtras"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:onClick="atras"
            android:text="@string/botonAtras"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/circuloCargaEdCuPelu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:color="@color/colorPrimary"
            android:indeterminate="true"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>